--- a/pwa_react_test/public/index.html
+++ b/pwa_react_test/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="description" content="Pwa test weather webapp" />
+  <link rel="apple-touch-icon" href="./images/logo.png" />
+  <link rel="manifest" href="./manifest.json" />
 
   <title>Weather Fetcher</title>
 </head>
@@ -19,7 +19,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw/sw.js').then((reg) => {
+        navigator.serviceWorker.register('./sw.js').then((reg) => {
           console.log('Service Worker registration success: ', reg.scope);
         }).catch((err) => {
           console.log('Service Worker registration failure: ', err);
